--- a/Version3/ModelPlotsNoKfold.ipynb
+++ b/Version3/ModelPlotsNoKfold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -30,27 +30,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "with open(\"./ModelPerformanceNew/pass_outlier_performance_log.pkl\", \"rb\") as f:\n",
+    "# V2 都是加入子類別的模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"./ModelPerformance/pass_outlier_performance_log.pkl\", \"rb\") as f:\n",
     "    pass_outlier_performance_log = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNew/pass_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/pass_performance_log.pkl\", \"rb\") as f:\n",
     "    pass_performance_log = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNew/car_motor_outlier_overlap_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/car_motor_outlier_overlap_performance_log.pkl\", \"rb\") as f:\n",
     "    car_motor_outlier_overlap_performance_log = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNew/motor_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/motor_performance_log.pkl\", \"rb\") as f:\n",
     "    motor_performance_log = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNew/car_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/car_performance_log.pkl\", \"rb\") as f:\n",
     "    car_performance_log = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNew/full_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/full_performance_log.pkl\", \"rb\") as f:\n",
     "    full_performance_log = pickle.load(f)\n",
     "    \n",
     "# 行人資料\n",
     "poo_mtrx, poo_recall, poo_class, poo_threshold = get_score(\n",
-    "    pass_outlier_performance_log['y'], pass_outlier_performance_log['decision_scores'])\n",
+    "    pass_outlier_performance_log['y'], pass_outlier_performance_log['decision_scores'], threshold=0)\n",
     "p_mtrx, p_recall, p_class, p_threshold = get_score(\n",
     "    pass_performance_log['y'], pass_performance_log['decision_scores'])\n",
     "# 駕駛資料\n",
@@ -65,22 +91,22 @@
     "    full_performance_log['y'], full_performance_log['decision_scores'])\n",
     "\n",
     "# Load data for the second version\n",
-    "with open(\"./ModelPerformanceNewV2/pass_outlier_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformanceV2/pass_outlier_performance_log.pkl\", \"rb\") as f:\n",
     "    pass_outlier_performance_log_v2 = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNewV2/pass_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformanceV2/pass_performance_log.pkl\", \"rb\") as f:\n",
     "    pass_performance_log_v2 = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNewV2/car_motor_outlier_overlap_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformanceV2/car_motor_outlier_overlap_performance_log.pkl\", \"rb\") as f:\n",
     "    car_motor_outlier_overlap_performance_log_v2 = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNewV2/motor_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformanceV2/motor_performance_log.pkl\", \"rb\") as f:\n",
     "    motor_performance_log_v2 = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNewV2/car_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformanceV2/car_performance_log.pkl\", \"rb\") as f:\n",
     "    car_performance_log_v2 = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNewV2/full_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformanceV2/full_performance_log.pkl\", \"rb\") as f:\n",
     "    full_performance_log_v2 = pickle.load(f)\n",
     "\n",
     "# Calculate recall scores for the second version\n",
     "poo_mtrx_v2, poo_recall_v2, poo_class_v2, poo_threshold_v2 = get_score(\n",
-    "    pass_outlier_performance_log_v2['y'], pass_outlier_performance_log_v2['decision_scores'])\n",
+    "    pass_outlier_performance_log_v2['y'], pass_outlier_performance_log_v2['decision_scores'], threshold=0)\n",
     "p_mtrx_v2, p_recall_v2, p_class_v2, p_threshold_v2 = get_score(\n",
     "    pass_performance_log_v2['y'], pass_performance_log_v2['decision_scores'])\n",
     "cmoo_mtrx_v2, cmoo_recall_v2, cmoo_class_v2, cmoo_threshold_v2 = get_score(\n",
@@ -95,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -103,23 +129,23 @@
      "output_type": "stream",
      "text": [
       "full version\n",
-      "Top recall: 0.7386\n",
-      "Bottom recall: 0.6878\n",
+      "Top recall: 0.6850\n",
+      "Bottom recall: 0.7874\n",
       "topology version\n",
-      "Top recall: 0.7141\n",
-      "Bottom recall: 0.6920\n"
+      "Top recall: 0.6000\n",
+      "Bottom recall: 0.7929\n"
      ]
     }
    ],
    "source": [
-    "recall_top_log_f = f_mtrx[0, 0] / (f_mtrx[0, 0] + f_mtrx[0, 1])\n",
-    "recall_bottom_log_f = f_mtrx[1, 1] / (f_mtrx[1, 1] + f_mtrx[1, 0])\n",
+    "recall_top_log_f = f_mtrx_v2[0, 0] / (f_mtrx_v2[0, 0] + f_mtrx_v2[0, 1])\n",
+    "recall_bottom_log_f = f_mtrx_v2[1, 1] / (f_mtrx_v2[1, 1] + f_mtrx_v2[1, 0])\n",
     "\n",
     "print('full version')\n",
     "print(f\"Top recall: {recall_top_log_f:.4f}\")\n",
     "print(f\"Bottom recall: {recall_bottom_log_f:.4f}\")\n",
     "\n",
-    "mapper_log = c_mtrx + m_mtrx + cmoo_mtrx_v2 + p_mtrx_v2 + poo_mtrx\n",
+    "mapper_log = c_mtrx_v2 + m_mtrx + cmoo_mtrx_v2 + p_mtrx_v2 + poo_mtrx_v2\n",
     "\n",
     "recall_top_log_m = mapper_log[0, 0] / (mapper_log[0, 0] + mapper_log[0, 1])\n",
     "recall_bottom_log_m = mapper_log[1, 1] / (mapper_log[1, 1] + mapper_log[1, 0])\n",
@@ -186,26 +212,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    }
+   ],
    "source": [
-    "with open(\"./ModelPerformanceNew/pass_outlier_performance_svc.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/pass_outlier_performance_svc.pkl\", \"rb\") as f:\n",
     "    pass_outlier_performance_svc = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNew/pass_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/pass_performance_log.pkl\", \"rb\") as f:\n",
     "    pass_performance_svc = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNew/car_motor_outlier_overlap_performance_svc.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/car_motor_outlier_overlap_performance_svc.pkl\", \"rb\") as f:\n",
     "    car_motor_outlier_overlap_performance_svc = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNew/motor_performance_svc.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/motor_performance_svc.pkl\", \"rb\") as f:\n",
     "    motor_performance_svc = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNew/car_performance_svc.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/car_performance_svc.pkl\", \"rb\") as f:\n",
     "    car_performance_svc = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNew/full_performance_svc.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/full_performance_svc.pkl\", \"rb\") as f:\n",
     "    full_performance_svc = pickle.load(f)\n",
     "    \n",
     "# 行人資料\n",
     "poo_mtrx, poo_recall, poo_class, poo_threshold = get_score(\n",
-    "    pass_outlier_performance_svc['y'], pass_outlier_performance_svc['decision_scores'])\n",
+    "    pass_outlier_performance_svc['y'], pass_outlier_performance_svc['decision_scores'], threshold=-5)\n",
     "p_mtrx, p_recall, p_class, p_threshold = get_score(\n",
     "    pass_performance_svc['y'], pass_performance_svc['decision_scores'])\n",
     "# 駕駛資料\n",
@@ -219,22 +264,22 @@
     "f_mtrx, f_recall, f_class, f_threshold = get_score(\n",
     "    full_performance_svc['y'], full_performance_svc['decision_scores'])\n",
     "\n",
-    "with open(\"./ModelPerformanceNewV2/pass_outlier_performance_svc.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformanceV2/pass_outlier_performance_svc.pkl\", \"rb\") as f:\n",
     "    pass_outlier_performance_svc_v2 = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNewV2/pass_performance_svc.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformanceV2/pass_performance_svc.pkl\", \"rb\") as f:\n",
     "    pass_performance_svc_v2 = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNewV2/car_motor_outlier_overlap_performance_svc.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformanceV2/car_motor_outlier_overlap_performance_svc.pkl\", \"rb\") as f:\n",
     "    car_motor_outlier_overlap_performance_svc_v2 = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNewV2/motor_performance_svc.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformanceV2/motor_performance_svc.pkl\", \"rb\") as f:\n",
     "    motor_performance_svc_v2 = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNewV2/car_performance_svc.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformanceV2/car_performance_svc.pkl\", \"rb\") as f:\n",
     "    car_performance_svc_v2 = pickle.load(f)\n",
-    "with open(\"./ModelPerformanceNewV2/full_performance_svc.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformanceV2/full_performance_svc.pkl\", \"rb\") as f:\n",
     "    full_performance_svc_v2 = pickle.load(f)\n",
     "    \n",
     "# 行人資料V2\n",
     "poo_mtrx_v2, poo_recall_v2, poo_class_v2, poo_threshold_v2 = get_score(\n",
-    "    pass_outlier_performance_svc_v2['y'], pass_outlier_performance_svc_v2['decision_scores'])\n",
+    "    pass_outlier_performance_svc_v2['y'], pass_outlier_performance_svc_v2['decision_scores'], threshold=-5)\n",
     "p_mtrx_v2, p_recall_v2, p_class_v2, p_threshold_v2 = get_score(\n",
     "    pass_performance_svc_v2['y'], pass_performance_svc_v2['decision_scores'])\n",
     "# 駕駛資料V2\n",
@@ -250,13 +295,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "full version\n",
+      "Top recall: 0.7480\n",
+      "Bottom recall: 0.6929\n",
+      "topology version\n",
+      "Top recall: 0.6786\n",
+      "Bottom recall: 0.6714\n"
+     ]
+    }
+   ],
+   "source": [
+    "recall_top_svc_f = f_mtrx_v2[0, 0] / (f_mtrx_v2[0, 0] + f_mtrx_v2[0, 1])\n",
+    "recall_bottom_svc_f = f_mtrx_v2[1, 1] / (f_mtrx_v2[1, 1] + f_mtrx_v2[1, 0])\n",
+    "\n",
+    "print('full version')\n",
+    "print(f\"Top recall: {recall_top_svc_f:.4f}\")\n",
+    "print(f\"Bottom recall: {recall_bottom_svc_f:.4f}\")\n",
+    "\n",
+    "mapper_svc = c_mtrx_v2 + m_mtrx + cmoo_mtrx_v2 + p_mtrx + poo_mtrx\n",
+    "\n",
+    "recall_top_svc_m = mapper_svc[0, 0] / (mapper_svc[0, 0] + mapper_svc[0, 1])\n",
+    "recall_bottom_svc_m = mapper_svc[1, 1] / (mapper_svc[1, 1] + mapper_svc[1, 0])\n",
+    "\n",
+    "print('topology version')\n",
+    "print(f\"Top recall: {recall_top_svc_m:.4f}\")\n",
+    "print(f\"Bottom recall: {recall_bottom_svc_m:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# 獲取總數\n",
     "poo_total_v2 = np.sum(poo_mtrx_v2)\n",
     "p_total_v2 = np.sum(p_mtrx_v2)\n",
@@ -308,57 +386,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "full version\n",
-      "Top recall: 0.7638\n",
-      "Bottom recall: 0.6688\n",
-      "topology version\n",
-      "Top recall: 0.7198\n",
-      "Bottom recall: 0.7025\n"
-     ]
-    }
-   ],
-   "source": [
-    "recall_top_svc_f = f_mtrx[0, 0] / (f_mtrx[0, 0] + f_mtrx[0, 1])\n",
-    "recall_bottom_svc_f = f_mtrx[1, 1] / (f_mtrx[1, 1] + f_mtrx[1, 0])\n",
-    "\n",
-    "print('full version')\n",
-    "print(f\"Top recall: {recall_top_svc_f:.4f}\")\n",
-    "print(f\"Bottom recall: {recall_bottom_svc_f:.4f}\")\n",
-    "\n",
-    "mapper_svc = c_mtrx + m_mtrx + cmoo_mtrx_v2 + p_mtrx_v2 + poo_mtrx\n",
-    "\n",
-    "recall_top_svc_m = mapper_svc[0, 0] / (mapper_svc[0, 0] + mapper_svc[0, 1])\n",
-    "recall_bottom_svc_m = mapper_svc[1, 1] / (mapper_svc[1, 1] + mapper_svc[1, 0])\n",
-    "\n",
-    "print('topology version')\n",
-    "print(f\"Top recall: {recall_top_svc_m:.4f}\")\n",
-    "print(f\"Bottom recall: {recall_bottom_svc_m:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7386089171974523\n",
-      "0.6877637130801688\n",
-      "0.714140127388535\n",
-      "0.6919831223628692\n",
-      "0.763831847133758\n",
-      "0.6687763713080169\n",
-      "0.7197859872611465\n",
-      "0.7025316455696202\n"
+      "0.6850393700787402\n",
+      "0.7874015748031497\n",
+      "0.6\n",
+      "0.7928571428571428\n",
+      "0.7480314960629921\n",
+      "0.6929133858267716\n",
+      "0.6785714285714286\n",
+      "0.6714285714285714\n"
      ]
     }
    ],
