--- a/Version3/OriginModel.ipynb
+++ b/Version3/OriginModel.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 該檔案將駕駛的overlap和outlier區分，但是由於overlap資料量太少，無法使用smote生成新資料點"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
