--- a/Version3/Car.ipynb
+++ b/Version3/Car.ipynb
@@ -2246,7 +2246,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Cllava",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2260,7 +2260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
