--- a/Version3/CarMap.ipynb
+++ b/Version3/CarMap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,22 +23,15 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm as cm\n",
-    "from matplotlib.cm import get_cmap\n",
     "from matplotlib.font_manager import FontProperties\n",
     "\n",
     "# 獲取當前工作目錄\n",
     "current_dir = os.getcwd()\n",
     "version3_path = os.path.join(current_dir, \"TrafficTDApython\", \"Version3\", \"tdamapper\", \"core_old.py\")\n",
     "\n",
-    "from sklearn.cluster import AgglomerativeClustering\n",
-    "from tdamapper.core_old import MapperAlgorithm\n",
-    "from tdamapper.cover import CubicalCover\n",
-    "from tdamapper.clustering import FailSafeClustering\n",
-    "from tdamapper.plot import MapperLayoutInteractive, MapperPlot\n",
-    "\n",
-    "from utils.models import *\n",
     "from utils.utils_v3 import *\n",
     "from utils.plots import *\n",
+    "from utils.mappping_model import *\n",
     "\n",
     "try:\n",
     "    myfont = FontProperties(fname=r\"/System/Library/Fonts/PingFang.ttc\")\n",
@@ -56,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +91,11 @@
     "    '車道劃分設施-分向設施大類別名稱',\n",
     "    '事故類型及型態大類別名稱', '當事者區分-類別-大類別名稱-車種', '當事者行動狀態大類別名稱',\n",
     "    '車輛撞擊部位大類別名稱-最初', '車輛撞擊部位大類別名稱-其他',\n",
+    "\n",
+    "    # 小類別\n",
+    "    # '道路型態子類別名稱', '事故位置子類別名稱', '事故類型及型態子類別名稱', '肇因研判子類別名稱-主要',\n",
+    "    # '當事者區分-類別-子類別名稱-車種', '當事者行動狀態子類別名稱', '車輛撞擊部位子類別名稱-最初',\n",
+    "    # '車輛撞擊部位子類別名稱-其他', '肇因研判子類別名稱-個別',\n",
     "\n",
     "    # 兩個欄位只有兩個觀察值不同\n",
     "    '肇因研判大類別名稱-主要',\n",
@@ -198,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,122 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.linear_model import Ridge\n",
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "import numpy as np\n",
-    "\n",
-    "def ridge_cm_kfold(X, y, k=5, alpha=1.0):\n",
-    "    \"\"\"\n",
-    "    使用 Ridge Regression 進行 K-Fold 交叉驗證。\n",
-    "\n",
-    "    Args:\n",
-    "        X (DataFrame): 特徵矩陣。\n",
-    "        y (Series): 目標變量。\n",
-    "        k (int): K-Fold 的折數，默認為 5。\n",
-    "        alpha (float): Ridge 的正則化強度參數，默認為 1.0。\n",
-    "\n",
-    "    Returns:\n",
-    "        np.array: 所有測試集的真實值。\n",
-    "        np.array: 所有測試集的預測值。\n",
-    "        np.array: 所有測試集的原始索引。\n",
-    "    \"\"\"\n",
-    "    kf = KFold(n_splits=k, shuffle=True, random_state=42)\n",
-    "\n",
-    "    y_true_all = []\n",
-    "    y_pred_all = []\n",
-    "    original_indices = []\n",
-    "\n",
-    "    for train_index, test_index in kf.split(X):\n",
-    "        X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
-    "        y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
-    "\n",
-    "        # Ridge regression model with specified alpha\n",
-    "        model = Ridge(alpha=alpha)\n",
-    "        model.fit(X_train, y_train)\n",
-    "\n",
-    "        # Prediction\n",
-    "        y_pred = model.predict(X_test)\n",
-    "\n",
-    "        # Store metrics and results\n",
-    "        y_true_all.extend(y_test)\n",
-    "        y_pred_all.extend(y_pred)\n",
-    "        original_indices.extend(test_index)\n",
-    "\n",
-    "    # Calculate evaluation metrics\n",
-    "    mse = mean_squared_error(y_true_all, y_pred_all)\n",
-    "    r2 = r2_score(y_true_all, y_pred_all)\n",
-    "\n",
-    "    print(f\"Mean Squared Error (MSE): {mse:.4f}\")\n",
-    "    print(f\"R^2 Score: {r2:.4f}\")\n",
-    "\n",
-    "    return np.array(y_true_all), np.array(y_pred_all), np.array(original_indices)\n",
-    "\n",
-    "def logistic_cm_kfold(X, y, k=5):\n",
-    "    kf = KFold(n_splits=k, shuffle=True, random_state=42)\n",
-    "\n",
-    "    y_true_all = []\n",
-    "    y_proba_all = []\n",
-    "    original_indices = []\n",
-    "\n",
-    "    for train_index, test_index in kf.split(X):\n",
-    "        X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
-    "        y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
-    "\n",
-    "        # Oversampling + undersampling\n",
-    "        smote = SMOTE(random_state=42, k_neighbors=3)\n",
-    "        enn = EditedNearestNeighbours(n_neighbors=3)\n",
-    "        smote_enn = SMOTEENN(smote=smote, enn=enn)\n",
-    "        X_resampled_train, y_resampled_train = smote_enn.fit_resample(X_train, y_train)\n",
-    "\n",
-    "        # Model and GridSearch\n",
-    "        model = LogisticRegression(solver='saga', max_iter=10000)\n",
-    "        parameters = {\n",
-    "            'penalty': ['l2', 'l1'],\n",
-    "            'C': [0.01, 0.1, 1, 10]\n",
-    "        }\n",
-    "        grid_search = GridSearchCV(model, parameters, cv=5, scoring='accuracy', n_jobs=12)\n",
-    "        grid_search.fit(X_resampled_train, y_resampled_train)\n",
-    "        best_model = grid_search.best_estimator_\n",
-    "\n",
-    "        print(f\"Best parameters for this fold: {grid_search.best_params_}\")\n",
-    "\n",
-    "        # Prediction and probability\n",
-    "        y_proba = best_model.predict_proba(X_test)[:, 1]\n",
-    "\n",
-    "        # Store metrics and results\n",
-    "        y_true_all.extend(y_test)\n",
-    "        y_proba_all.extend(y_proba)\n",
-    "        original_indices.extend(test_index)\n",
-    "\n",
-    "    return np.array(y_true_all), np.array(y_proba_all), np.array(original_indices)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_train_test_data(input_data, classify=True):\n",
-    "    \n",
-    "    if classify:\n",
-    "        y = input_data['死亡'].apply(lambda x: 1 if x > 0 else 0)\n",
-    "    else:\n",
-    "        y = input_data['死亡']\n",
-    "    new_input_data = input_data.drop(columns=['受傷', '死亡'], inplace=False)\n",
-    "    X = new_input_data\n",
-    "\n",
-    "    return X, y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -351,23 +234,26 @@
      "output_type": "stream",
      "text": [
       "Mean Squared Error (MSE): 0.0066\n",
-      "R^2 Score: -0.0139\n"
+      "R^2 Score: -0.0143\n",
+      "Mean Squared Error (MSE): 0.0065\n",
+      "R^2 Score: -0.0005\n"
      ]
     }
    ],
    "source": [
     "pass_X, pass_y = get_train_test_data(final_table, classify=False)\n",
-    "pass_y_ridge, pass_decision_scores_ridge, pass_indices_ridge = ridge_cm_kfold(pass_X, pass_y)"
+    "pass_y_ridge, pass_decision_scores_ridge, pass_indices_ridge = ridge_cm_kfold(pass_X, pass_y)\n",
+    "pass_y_lasso, pass_decision_scores_lasso, pass_indices_lasso = lasso_cm_kfold(pass_X, pass_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "info['死亡比例'] = final_table['死亡']\n",
-    "info['score'] = pass_decision_scores_ridge\n",
+    "info['score'] = pass_decision_scores_lasso\n",
     "\n",
     "from collections import defaultdict\n",
     "\n",
@@ -395,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +290,7 @@
        "'./Map/car_weighted_map.html'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
