--- a/Version3/Car.ipynb
+++ b/Version3/Car.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -52,26 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "44 10057\n",
-      "45 10286\n",
-      "40 9143\n",
-      "35 8000\n",
-      "36 8229\n",
-      "39 8914\n",
-      "47 10743\n",
-      "43 9829\n",
-      "40 9143\n",
-      "47 10743\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "select_lst = [\n",
     "    # 月份是為了篩選每個月2萬筆\n",
@@ -98,7 +81,7 @@
     "    '肇因研判大類別名稱-主要',\n",
     "    # '肇因研判大類別名稱-個別',\n",
     "]\n",
-    "select_lst = dataA1.columns\n",
+    "# select_lst = dataA1.columns\n",
     "\n",
     "def preprocess(input_data, select_lst):\n",
     "    # 篩選到第一個順位，因為注重的是單次事故的情況\n",
@@ -133,10 +116,35 @@
     "    return full_data\n",
     "\n",
     "full_dataA1 = preprocess(dataA1, select_lst)\n",
-    "full_dataA2 = preprocess(dataA2, select_lst)\n",
-    "\n",
+    "full_dataA2 = preprocess(dataA2, select_lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 4571\n",
+      "20 4571\n",
+      "18 4114\n",
+      "16 3657\n",
+      "16 3657\n",
+      "18 4114\n",
+      "21 4800\n",
+      "19 4343\n",
+      "18 4114\n",
+      "21 4800\n",
+      "dummy_data: (42928, 142)\n"
+     ]
+    }
+   ],
+   "source": [
     "# 下採樣資料\n",
-    "sampling_ratio = 0.33  # 下採樣比例，根據A1 和 A2 原始數據量比例調整\n",
+    "sampling_ratio = 0.15  # 下採樣比例，根據A1 和 A2 原始數據量比例調整\n",
     "total_ratio = len(full_dataA1) / len(full_dataA2) # 保留 A1/A2 的比例\n",
     "downsampled_A1, downsampled_A2 = downsample_by_month_simple(full_dataA1, full_dataA2, sampling_ratio, total_ratio)\n",
     "# Concat\n",
@@ -150,6 +158,7 @@
     "for column in rbind_data.columns:\n",
     "    if rbind_data[column].nunique() == 1:  # 檢查唯一值數量是否等於 1\n",
     "        columns_to_drop.append(column)\n",
+    "rbind_data.drop(columns=columns_to_drop, inplace=True)\n",
     "# Dummy\n",
     "rbind_data[\"速限-第1當事者\"] = rbind_data[\"速限-第1當事者\"].astype(str)\n",
     "dummy_data = pd.get_dummies(rbind_data)\n",
@@ -295,6 +304,20 @@
     "plt.xticks(components)\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# grid_search_info = {\n",
+    "#     'lens': lens,\n",
+    "#     'mapper_numpy': mapper_numpy,\n",
+    "# }\n",
+    "# with open('../ForMatrix/CalculatedData/driver.pkl', 'wb') as f:\n",
+    "#     pickle.dump(grid_search_info, f)"
    ]
   },
   {
@@ -1538,15 +1561,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "choose = 'score'\n",
+    "choose = '死亡'\n",
     "\n",
     "for i in range(87, 88):\n",
     "    print(f'Seed: {i}')\n",
-    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'], rbind_data, seed=i, iterations=150)\n",
-    "    mapper_plot = mapper_plotter.create_mapper_plot(choose, average_encoded_label, avg=True)\n",
+    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'], rbind_data, seed=i, iterations=150,\n",
+    "                                   range_lst=[-0.075, 0.05, 0.06, -0.2])\n",
+    "    mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
     "    full_info = mapper_plotter.extract_data()\n",
-    "    mapper_plotter.map_colors(choose, size=15, threshold=0, range_lst=[-0.2, 0.15, 0.06, -0.2])\n",
-    "    mapper_plotter.plot(choose, avg=True, set_label=True, size=100000)\n",
+    "    full_info[['x', 'y', 'z']] = rotate_z(full_info[['x', 'y', 'z']], 70)\n",
+    "    mapper_plotter.map_colors(choose, size=15, threshold=0)\n",
+    "    # mapper_plotter.plot(choose, avg=True, set_label=True, size=100000)\n",
+    "    mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=100000)\n",
     "    # mapper_plotter.plot_3d_pvis(range_lst=[-0.2, 0.2, 0.2, -0.2])"
    ]
   },
