資料劃分完成、進行模型

--- a/Version4/Motor.ipynb
+++ b/Version4/Motor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
       "53 13262\n",
       "40 10009\n",
       "45 11260\n",
-      "dummy_data: (165818, 144)\n"
+      "dummy_data: (165818, 142)\n"
      ]
     }
    ],
@@ -167,7 +167,8 @@
     "rbind_data.drop(columns=['發生月份'], inplace=True)\n",
     "# 處理年齡和速限\n",
     "rbind_data = process_age_speed(rbind_data)\n",
-    "# rbind_data.drop(['死亡', '受傷'], axis=1, inplace=True)\n",
+    "death = rbind_data['死亡']\n",
+    "rbind_data.drop(['死亡', '受傷'], axis=1, inplace=True)\n",
     "# 唯一值處理\n",
     "columns_to_drop = []\n",
     "for column in rbind_data.columns:\n",
@@ -180,7 +181,7 @@
     "print('dummy_data:', dummy_data.shape)\n",
     "mapper_numpy = dummy_data.to_numpy()\n",
     "\n",
-    "# rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']"
+    "rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']"
    ]
   },
   {
@@ -408,7 +409,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "choose = '顯著特徵'\n",
+    "\n",
+    "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=1, iterations=100, dim=3,\n",
+    "                                   range_lst=[-0.1, 0.1, 0.1, -0.1])\n",
+    "mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
+    "full_info = mapper_plotter.extract_data()\n",
+    "full_info[['x', 'y', 'z']] = rotate_y(full_info[['x', 'y', 'z']], 50)\n",
+    "full_info[['x', 'y', 'z']] = rotate_x(full_info[['x', 'y', 'z']], -35)\n",
+    "full_info[['x', 'y', 'z']] = rotate_z(full_info[['x', 'y', 'z']], 150)\n",
+    "mapper_plotter.map_colors(choose, size=15, threshold=0)\n",
+    "mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "choose = '死亡'\n",
+    "rbind_data['死亡'] = death\n",
     "\n",
     "for i in [1]:\n",
     "    print(f'Seed: {i}')\n",
@@ -420,40 +441,7 @@
     "    full_info[['x', 'y', 'z']] = rotate_x(full_info[['x', 'y', 'z']], -35)\n",
     "    full_info[['x', 'y', 'z']] = rotate_z(full_info[['x', 'y', 'z']], 150)\n",
     "    mapper_plotter.map_colors(choose, size=15, threshold=0)\n",
-    "    # mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)\n",
-    "    mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=3000, minimum_lst=[0, 0.025])\n",
-    "    # mapper_plotter.plot_3d_pvis(range_lst=[-0.2, 0.2, 0.2, -0.2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# lst = ['Cluster', '車輛撞擊部位大類別名稱-最初', '當事者事故發生時年齡', '顯著特徵']\n",
-    "lst = ['天候名稱', '光線名稱', '道路類別-第1當事者-名稱', '速限-第1當事者', '路面狀況-路面鋪裝名稱',\n",
-    "       '路面狀況-路面狀態名稱', '路面狀況-路面缺陷名稱', '道路障礙-障礙物名稱', '道路障礙-視距品質名稱', '道路障礙-視距名稱',\n",
-    "       '號誌-號誌種類名稱', '號誌-號誌動作名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
-    "       '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱', '當事者屬-性-別名稱', '當事者事故發生時年齡',\n",
-    "       '保護裝備名稱', '行動電話或電腦或其他相類功能裝置名稱', '肇事逃逸類別名稱-是否肇逃', '道路型態大類別名稱',\n",
-    "       '事故位置大類別名稱', '車道劃分設施-分向設施大類別名稱', '事故類型及型態大類別名稱', '當事者區分-類別-大類別名稱-車種',\n",
-    "       '車輛撞擊部位大類別名稱-其他', '肇因研判大類別名稱-主要', '道路型態子類別名稱']\n",
-    "\n",
-    "for choose in lst:\n",
-    "    try:\n",
-    "        print(f'Seed: {i}')\n",
-    "        mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=8, iterations=150,\n",
-    "                                    range_lst=[-0.1, 0.1, 0.2, -0.2], dim=2)\n",
-    "        mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
-    "        full_info = mapper_plotter.extract_data()\n",
-    "        # full_info[['x', 'y', 'z']] = rotate_z(full_info[['x', 'y', 'z']], 70)\n",
-    "        mapper_plotter.map_colors(choose, size=15, threshold=0)\n",
-    "        mapper_plotter.plot(choose, avg=False, set_label=True, size=100000,\n",
-    "                            save_path=f\"../Version4/GridSearch/MapperColor/Motor/o2_i9_{choose}.png\")\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        continue"
+    "    mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=3000, minimum_lst=[-0.05, 0.05])"
    ]
   },
   {
@@ -471,31 +459,25 @@
    "source": [
     "from shapely.geometry import Point, Polygon\n",
     "\n",
-    "rectangle1 = Polygon([(-0.1, -0.03), (-0.1, 0),(-0.07, 0.1), (0, 0.06), (0.02, 0.04), (-0.06, 0.01)])\n",
-    "rectangle2 = Polygon([(-0.04, -0.02), (-0.06, 0.01), (0.02, 0.04), (0.02, 0.02)])\n",
-    "rectangle3 = Polygon([(-0.04, -0.03), (-0.04, -0.02),(0.02, 0.02), (0.05, 0.05), (0.15, 0), (0.07, -0.02)])\n",
-    "rectangle4 = Polygon([(-0.065, -0.1), (-0.04, -0.03), (0.07, -0.02), (0.1, -0.1)])\n",
+    "rectangle1 = Polygon([(-0.0014, -0.06), (-0.08, -0.06),(-0.08, 0.06), (-0.0014, 0.06)])\n",
+    "rectangle2 = Polygon([(-0.0014, -0.06), (-0.0014, 0.065), (0.1, 0.065), (0.1, -0.06)])\n",
     "\n",
-    "filtered_full_info = full_info[(full_info['y'] > -0.2) &\n",
+    "filtered_full_info = full_info[(full_info['y'] > -0.1) &\n",
     "                               (full_info['y'] < 0.1) &\n",
     "                               (full_info['x'] > -0.1) &\n",
-    "                               (full_info['x'] < 0.15)]\n",
+    "                               (full_info['x'] < 0.1)]\n",
     "filtered_full_info = filtered_full_info[filtered_full_info['size'] > 15]\n",
-    "# filtered_full_info = full_info\n",
+    "filtered_full_info = full_info\n",
     "\n",
     "# 檢查每個點是否在任意一個區塊內\n",
     "inside_indices_1 = filtered_full_info.apply(lambda row: Point(row['x'], row['y']).within(rectangle1), axis=1)\n",
     "inside_indices_2 = filtered_full_info.apply(lambda row: Point(row['x'], row['y']).within(rectangle2), axis=1)\n",
-    "inside_indices_3 = filtered_full_info.apply(lambda row: Point(row['x'], row['y']).within(rectangle3), axis=1)\n",
-    "inside_indices_4 = filtered_full_info.apply(lambda row: Point(row['x'], row['y']).within(rectangle4), axis=1)\n",
     "\n",
     "label_0 = filtered_full_info[inside_indices_1]\n",
     "label_1 = filtered_full_info[inside_indices_2]\n",
-    "label_2 = filtered_full_info[inside_indices_3]\n",
-    "label_3 = filtered_full_info[inside_indices_4]\n",
     "\n",
     "# 提取區域內和區域外的數據\n",
-    "all_inside_indices = inside_indices_1 | inside_indices_2 | inside_indices_3 | inside_indices_4\n",
+    "all_inside_indices = inside_indices_1 | inside_indices_2\n",
     "outside_indices = ~all_inside_indices\n",
     "\n",
     "label_out = filtered_full_info[outside_indices]\n",
@@ -506,14 +488,12 @@
     "plt.figure(figsize=(10, 8))\n",
     "plt.scatter(label_0['x'], label_0['y'], color='green', s=10)\n",
     "plt.scatter(label_1['x'], label_1['y'], color='blue', s=10)\n",
-    "plt.scatter(label_2['x'], label_2['y'], color='purple', s=10)\n",
-    "plt.scatter(label_3['x'], label_3['y'], color='orange', s=10)\n",
     "plt.scatter(label_out['x'], label_out['y'], color='red', s=10)\n",
     "\n",
     "# 繪製矩形區塊\n",
-    "for rect, color, alpha in zip([rectangle1, rectangle2, rectangle3, rectangle4], \n",
-    "                              ['green', 'blue', 'purple', 'orange'], \n",
-    "                              [0.2, 0.2, 0.2, 0.2]):\n",
+    "for rect, color, alpha in zip([rectangle1, rectangle2], \n",
+    "                              ['green', 'blue'], \n",
+    "                              [0.2, 0.2]):\n",
     "    x, y = rect.exterior.xy\n",
     "    plt.fill(x, y, color=color, alpha=alpha)\n",
     "\n",
@@ -528,15 +508,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "87488\n",
-      "95503\n"
+      "165818\n",
+      "165818\n"
      ]
     }
    ],
@@ -544,16 +524,14 @@
     "# 獲取每個label的index\n",
     "count_0 = get_unique_ids(label_0)\n",
     "count_1 = get_unique_ids(label_1)\n",
-    "count_2 = get_unique_ids(label_2)\n",
-    "count_3 = get_unique_ids(label_3)\n",
     "count_out = get_unique_ids(label_out)\n",
     "\n",
     "index_to_groups = {}\n",
     "\n",
     "# 將索引與群體的關係記錄下來\n",
     "for group_name, group_indexes in zip(\n",
-    "    [\"full_0\", \"full_1\", \"full_2\", \"full_3\", \"full_out\"],\n",
-    "    [count_0, count_1, count_2, count_3, count_out],\n",
+    "    [\"full_0\", \"full_1\", \"full_out\"],\n",
+    "    [count_0, count_1, count_out],\n",
     "):\n",
     "    for idx in group_indexes:\n",
     "        if idx not in index_to_groups:\n",
@@ -563,70 +541,71 @@
     "# 找交集索引\n",
     "intersection_indexes = {idx for idx, groups in index_to_groups.items() if len(groups) > 1}\n",
     "\n",
-    "# 找出群體2和3的交集\n",
-    "intersection_21 = {idx for idx in count_2 if idx in count_1}\n",
-    "\n",
-    "# 從交集中移除屬於群體2和3交集的資料\n",
-    "intersection_indexes -= intersection_21\n",
-    "\n",
     "# 移除交集的index\n",
-    "count_0 = [i for i in count_0 if i not in intersection_indexes and i not in intersection_21]\n",
-    "count_1 = [i for i in count_1 if i not in intersection_indexes and i not in intersection_21]\n",
-    "count_2 = [i for i in count_2 if i not in intersection_indexes and i not in intersection_21]\n",
-    "count_3 = [i for i in count_3 if i not in intersection_indexes and i not in intersection_21]\n",
-    "count_out = [i for i in count_out if i not in intersection_indexes and i not in intersection_21]\n",
+    "count_0 = [i for i in count_0 if i not in intersection_indexes]\n",
+    "count_1 = [i for i in count_1 if i not in intersection_indexes]\n",
+    "count_out = [i for i in count_out if i not in intersection_indexes]\n",
     "\n",
-    "# 分群處理\n",
-    "full_0 = dummy_data.loc[count_0]\n",
-    "full_1 = dummy_data.loc[count_1]\n",
-    "full_2 = dummy_data.loc[count_2]\n",
-    "full_3 = dummy_data.loc[count_3]\n",
-    "full_out = dummy_data.loc[count_out]\n",
-    "full_21 = dummy_data.loc[list(intersection_21)]\n",
-    "overlap_data = dummy_data.loc[list(intersection_indexes)]\n",
+    "\n",
+    "full_0 = rbind_data.loc[count_0]\n",
+    "full_1 = rbind_data.loc[count_1]\n",
+    "full_out = rbind_data.loc[count_out]\n",
+    "overlap_data = rbind_data.loc[list(intersection_indexes)]\n",
     "\n",
     "# 確認所有資料都被獲取\n",
     "assert len(count_0) == full_0.shape[0]\n",
     "assert len(count_1) == full_1.shape[0]\n",
-    "assert len(count_2) == full_2.shape[0]\n",
-    "assert len(count_3) == full_3.shape[0]\n",
     "assert len(count_out) == full_out.shape[0]\n",
-    "assert len(intersection_21) == full_21.shape[0]\n",
     "\n",
-    "print(full_0.shape[0] + full_1.shape[0] + full_2.shape[0] + full_3.shape[0] + full_out.shape[0] + full_21.shape[0] + overlap_data.shape[0])\n",
-    "print(dummy_data.shape[0])\n"
+    "print(full_0.shape[0] + full_1.shape[0] + full_out.shape[0] + overlap_data.shape[0])\n",
+    "print(rbind_data.shape[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    98115\n",
+      "1      267\n",
+      "2        1\n",
+      "Name: 死亡, dtype: int64\n",
+      "0    59647\n",
+      "1      352\n",
+      "2        4\n",
+      "Name: 死亡, dtype: int64\n",
+      "0    4767\n",
+      "1      29\n",
+      "2       1\n",
+      "Name: 死亡, dtype: int64\n",
+      "0    2629\n",
+      "1       6\n",
+      "Name: 死亡, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(full_0['死亡'].value_counts())\n",
+    "print(full_1['死亡'].value_counts())\n",
+    "print(full_out['死亡'].value_counts())\n",
+    "print(overlap_data['死亡'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "full_info.to_csv('./Data/MotorData/full_info.csv', index=False)\n",
     "full_0.to_csv('./Data/MotorData/full_0.csv', index=False)\n",
     "full_1.to_csv('./Data/MotorData/full_1.csv', index=False)\n",
-    "full_2.to_csv('./Data/MotorData/full_2.csv', index=False)\n",
-    "full_3.to_csv('./Data/MotorData/full_3.csv', index=False)\n",
     "full_out.to_csv('./Data/MotorData/full_out.csv', index=False)\n",
-    "overlap_data.to_csv('./Data/MotorData/overlap_data.csv', index=False)\n",
-    "full_21.to_csv('./Data/MotorData/full_21.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(full_0['死亡'].value_counts())\n",
-    "print(full_1['死亡'].value_counts())\n",
-    "print(full_2['死亡'].value_counts())\n",
-    "print(full_3['死亡'].value_counts())\n",
-    "print(full_out['死亡'].value_counts())\n",
-    "print(full_21['死亡'].value_counts())\n",
-    "print(dummy_data['死亡'].value_counts())\n",
-    "print(overlap_data['死亡'].value_counts())"
+    "overlap_data.to_csv('./Data/MotorData/overlap_data.csv', index=False)"
    ]
   }
  ],
