--- a/Version3/Pass.ipynb
+++ b/Version3/Pass.ipynb
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3096, 115)\n"
+      "(3096, 126)\n"
      ]
     }
    ],
@@ -98,7 +98,9 @@
     "    '車輛撞擊部位大類別名稱-其他',\n",
     "    '肇因研判大類別名稱-主要',\n",
     "    \n",
-    "    '車輛撞擊部位大類別名稱-最初' \n",
+    "    '車輛撞擊部位大類別名稱-最初',\n",
+    "    \n",
+    "    '道路型態子類別名稱'\n",
     "]\n",
     "\n",
     "# select_lst = dataA1.columns\n",
@@ -140,6 +142,7 @@
     "\n",
     "# 處理年齡和速限\n",
     "rbind_data = process_age_speed(rbind_data)\n",
+    "death = rbind_data['死亡']\n",
     "rbind_data.drop(['死亡', '受傷'], axis=1, inplace=True)\n",
     "# 唯一值處理\n",
     "columns_to_drop = []\n",
@@ -153,7 +156,7 @@
     "print(dummy_data.shape)\n",
     "mapper_numpy = dummy_data.to_numpy()\n",
     "\n",
-    "# rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']"
+    "rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']"
    ]
   },
   {
@@ -357,17 +360,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "output_file = './Gridsearch/Component12Pass/results_o5i10.pkl'\n",
     "\n",
-    "# with open(output_file, 'rb') as f:\n",
-    "#     detailed_results_df = pickle.load(f)\n",
+    "with open(output_file, 'rb') as f:\n",
+    "    detailed_results_df = pickle.load(f)\n",
     "    \n",
-    "with open(output_file, 'wb') as f:\n",
-    "    pickle.dump(detailed_results_df, f)"
+    "# with open(output_file, 'wb') as f:\n",
+    "#     pickle.dump(detailed_results_df, f)"
    ]
   },
   {
@@ -398,18 +401,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "choose = '死亡'\n",
+    "choose = '顯著特徵'\n",
     "\n",
     "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=87, iterations=100, dim=2,\n",
     "                                range_lst=[-0.25, 0.175, 0.25, -0.25])\n",
-    "mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
-    "# mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
+    "mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
     "full_info = mapper_plotter.extract_data()\n",
-    "# full_info['x'], full_info['y'] = -full_info['y'], full_info['x']\n",
-    "mapper_plotter.map_colors(choose, size=0, threshold=0)\n",
-    "# mapper_plotter.plot(choose, avg=False, set_label=True, size=100000)\n",
-    "mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=100000, minimum_lst=[-0.2, 0.1])\n",
-    "# mapper_plotter.plot_3d_pvis(range_lst=[-0.2, 0.1, 0.15, -0.18])"
+    "mapper_plotter.map_colors(choose, size=0, threshold=10)\n",
+    "mapper_plotter.plot(choose, avg=False, set_label=True, size=100000)"
    ]
   },
   {
@@ -419,72 +418,14 @@
    "outputs": [],
    "source": [
     "choose = '死亡'\n",
+    "rbind_data['死亡'] = death\n",
     "\n",
     "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=87, iterations=100, dim=2,\n",
     "                                range_lst=[-0.25, 0.175, 0.25, -0.25])\n",
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
-    "# mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
     "full_info = mapper_plotter.extract_data()\n",
-    "# full_info['x'], full_info['y'] = -full_info['y'], full_info['x']\n",
     "mapper_plotter.map_colors(choose, size=0, threshold=0)\n",
-    "# mapper_plotter.plot(choose, avg=False, set_label=True, size=100000)\n",
-    "mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=100000, minimum_lst=[-0.2, 0.15])\n",
-    "# mapper_plotter.plot_3d_pvis(range_lst=[-0.2, 0.1, 0.15, -0.18])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lst = ['天候名稱', '光線名稱',\n",
-    "       '道路類別-第1當事者-名稱', '速限-第1當事者', '道路型態大類別名稱', '道路型態子類別名稱', '事故位置大類別名稱',\n",
-    "       '事故位置子類別名稱', '路面狀況-路面鋪裝名稱', '路面狀況-路面狀態名稱', '路面狀況-路面缺陷名稱', '道路障礙-障礙物名稱',\n",
-    "       '道路障礙-視距品質名稱', '道路障礙-視距名稱', '號誌-號誌種類名稱', '號誌-號誌動作名稱',\n",
-    "       '車道劃分設施-分向設施大類別名稱', '車道劃分設施-分向設施子類別名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
-    "       '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱', '事故類型及型態大類別名稱',\n",
-    "       '事故類型及型態子類別名稱', '肇因研判大類別名稱-主要', '肇因研判子類別名稱-主要',\n",
-    "       '當事者區分-類別-大類別名稱-車種', '當事者區分-類別-子類別名稱-車種', '當事者屬-性-別名稱', '當事者事故發生時年齡',\n",
-    "       '保護裝備名稱', '行動電話或電腦或其他相類功能裝置名稱', '當事者行動狀態子類別名稱', '車輛撞擊部位大類別名稱-最初',\n",
-    "       '車輛撞擊部位子類別名稱-最初', '車輛撞擊部位大類別名稱-其他', '車輛撞擊部位子類別名稱-其他', '肇因研判大類別名稱-個別',\n",
-    "       '肇因研判子類別名稱-個別', '肇事逃逸類別名稱-是否肇逃''死亡', '受傷', 'Cluster', '顯著特徵']\n",
-    "lst = ['Cluster']\n",
-    "\n",
-    "for choose in lst:\n",
-    "       try:   \n",
-    "              mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=44, iterations=100)\n",
-    "              mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
-    "              full_info = mapper_plotter.extract_data()\n",
-    "              mapper_plotter.map_colors(choose, size=0, threshold=30, range_lst=[-0.2, 0.1, 0.15, -0.18])\n",
-    "              mapper_plotter.plot(choose, avg=False, set_label=True, size=100000,\n",
-    "                     save_path=f\"C:/Users/USER/Desktop/TrafficTDApython/Version3/GridSearch/MapperColor/Pass/o4_i7_{choose}.png\")\n",
-    "       except Exception as e:\n",
-    "              print(e)\n",
-    "              continue"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "choose = 'Cluster'\n",
-    "\n",
-    "unique_categories = rbind_data[choose].unique()\n",
-    "for index in range(detailed_results_df.shape[0]):\n",
-    "    # 統一顏色\n",
-    "    color_palette = get_cmap(\"tab20\", len(unique_categories))\n",
-    "    color_mapping_fixed = {category: color_palette(i) for i, category in enumerate(unique_categories)}\n",
-    "\n",
-    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'].iloc[index][0], \n",
-    "                                rbind_data, detailed_results_df)\n",
-    "    mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
-    "    mapper_plotter.extract_data()\n",
-    "    mapper_plotter.map_colors(choose, color_mapping_fixed, size=0)\n",
-    "    mapper_plotter.plot(choose, avg=False, set_label=True, size=100000,\n",
-    "                        save_path=f\"C:/Users/USER/Desktop/TrafficTDApython/Version3/GridSearch/Mapper/Pass/o{detailed_results_df['overlap'].iloc[index]}_i{detailed_results_df['interval'].iloc[index]}.png\")"
+    "mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=100000)"
    ]
   },
   {
@@ -502,51 +443,41 @@
    "source": [
     "from shapely.geometry import Point, Polygon\n",
     "\n",
-    "rectangle1 = Polygon([(-0.1, -0.05), (-0.1, 0.075), (-0.05, 0.075), (0, 0)])\n",
-    "rectangle2 = Polygon([(0, 0), (-0.05, 0.075), (-0.06, 0.1), (0, 0.1), (0.025, 0)])\n",
-    "rectangle3 = Polygon([(0.025, 0), (0, 0.1), (0.1, 0.1), (0.1, 0.025), (0.025, 0)]) \n",
-    "rectangle4 = Polygon([(0.025, 0), (0.1, 0.025), (0.2, -0.06), (0.1, -0.1)]) \n",
+    "rectangle1 = Polygon([(-0.0691, -0.15), (-0.3, -0.15), (-0.3, 0.2), (-0.0691, 0.2)])\n",
+    "rectangle2 = Polygon([(-0.0691, -0.2), (-0.0691, 0.2), (0.2, 0.2), (0.2, -0.2)])\n",
     "\n",
     "# 限制會導致full_info的資料量減少\n",
-    "range_lst=[-0.2, 0.2, 0.2, -0.25]\n",
-    "# filtered_full_info = full_info[(full_info['x'] > range_lst[0]) & \n",
-    "#           (full_info['y'] < range_lst[2]) & \n",
-    "#           (full_info['x'] < range_lst[1]) & \n",
-    "#           (full_info['y'] > range_lst[3])]\n",
+    "range_lst=[-0.25, 0.25, 0.25, -0.25]\n",
+    "filtered_full_info = full_info[(full_info['x'] > range_lst[0]) & \n",
+    "          (full_info['y'] < range_lst[2]) & \n",
+    "          (full_info['x'] < range_lst[1]) & \n",
+    "          (full_info['y'] > range_lst[3])]\n",
     "filtered_full_info = full_info\n",
     "\n",
     "# 檢查每個點是否在任意一個區塊內\n",
     "inside_indices_1 = filtered_full_info.apply(lambda row: Point(row['x'], row['y']).within(rectangle1), axis=1)\n",
     "inside_indices_2 = filtered_full_info.apply(lambda row: Point(row['x'], row['y']).within(rectangle2), axis=1)\n",
-    "inside_indices_3 = filtered_full_info.apply(lambda row: Point(row['x'], row['y']).within(rectangle3), axis=1)\n",
-    "inside_indices_4 = filtered_full_info.apply(lambda row: Point(row['x'], row['y']).within(rectangle4), axis=1)\n",
     "\n",
     "label_0 = filtered_full_info[inside_indices_1]\n",
     "label_1 = filtered_full_info[inside_indices_2]\n",
-    "label_2 = filtered_full_info[inside_indices_3]\n",
-    "label_3 = filtered_full_info[inside_indices_4]\n",
     "\n",
     "# 提取區域內和區域外的數據\n",
-    "all_inside_indices = inside_indices_1 | inside_indices_2 | inside_indices_3 | inside_indices_4\n",
+    "all_inside_indices = inside_indices_1 | inside_indices_2\n",
     "outside_indices = ~all_inside_indices\n",
     "\n",
     "label_out = filtered_full_info[outside_indices]\n",
-    "\n",
-    "# assert label_0.shape[0] + label_1.shape[0] + label_2.shape[0] + label_3.shape[0] + label_out.shape[0] == filtered_full_info.shape[0]\n",
     "\n",
     "plt.figure(figsize=(10, 8))\n",
     "\n",
     "# Plot points inside each polygon\n",
     "plt.scatter(label_0['x'], label_0['y'], color='green', s=10)\n",
     "plt.scatter(label_1['x'], label_1['y'], color='blue', s=10)\n",
-    "plt.scatter(label_2['x'], label_2['y'], color='purple', s=10)\n",
-    "plt.scatter(label_3['x'], label_3['y'], color='orange', s=10)\n",
     "plt.scatter(label_out['x'], label_out['y'], color='red', s=10)\n",
     "\n",
     "# Fill polygons with semi-transparent colors\n",
-    "for rect, color, alpha in zip([rectangle1, rectangle2, rectangle3, rectangle4], \n",
-    "                              ['green', 'blue', 'purple', 'orange'], \n",
-    "                              [0.2, 0.2, 0.2, 0.2]):\n",
+    "for rect, color, alpha in zip([rectangle1, rectangle2], \n",
+    "                              ['green', 'blue'], \n",
+    "                              [0.2, 0.2]):\n",
     "    x, y = rect.exterior.xy\n",
     "    plt.fill(x, y, color=color, alpha=alpha)\n",
     "\n",
@@ -556,13 +487,12 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.axis(\"equal\")\n",
-    "# plt.title(\"Passanger Topology\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -578,16 +508,14 @@
     "# 獲取每個label的index\n",
     "count_0 = get_unique_ids(label_0)\n",
     "count_1 = get_unique_ids(label_1)\n",
-    "count_2 = get_unique_ids(label_2)\n",
-    "count_3 = get_unique_ids(label_3)\n",
     "count_out = get_unique_ids(label_out)\n",
     "\n",
     "index_to_groups = {}\n",
     "\n",
     "# 將索引與群體的關係記錄下來\n",
     "for group_name, group_indexes in zip(\n",
-    "    [\"full_0\", \"full_1\", \"full_2\", \"full_3\", \"full_out\"],\n",
-    "    [count_0, count_1, count_2, count_3, count_out],\n",
+    "    [\"full_0\", \"full_1\", \"full_out\"],\n",
+    "    [count_0, count_1, count_out],\n",
     "):\n",
     "    for idx in group_indexes:\n",
     "        if idx not in index_to_groups:\n",
@@ -600,88 +528,66 @@
     "# 移除交集的index\n",
     "count_0 = [i for i in count_0 if i not in intersection_indexes]\n",
     "count_1 = [i for i in count_1 if i not in intersection_indexes]\n",
-    "count_2 = [i for i in count_2 if i not in intersection_indexes]\n",
-    "count_3 = [i for i in count_3 if i not in intersection_indexes]\n",
     "count_out = [i for i in count_out if i not in intersection_indexes]\n",
     "\n",
     "\n",
     "full_0 = rbind_data.loc[count_0]\n",
     "full_1 = rbind_data.loc[count_1]\n",
-    "full_2 = rbind_data.loc[count_2]\n",
-    "full_3 = rbind_data.loc[count_3]\n",
     "full_out = rbind_data.loc[count_out]\n",
     "overlap_data = rbind_data.loc[list(intersection_indexes)]\n",
     "\n",
     "# 確認所有資料都被獲取\n",
     "assert len(count_0) == full_0.shape[0]\n",
     "assert len(count_1) == full_1.shape[0]\n",
-    "assert len(count_2) == full_2.shape[0]\n",
-    "assert len(count_3) == full_3.shape[0]\n",
     "assert len(count_out) == full_out.shape[0]\n",
     "\n",
-    "print(full_0.shape[0] + full_1.shape[0] + full_2.shape[0] + full_3.shape[0] + full_out.shape[0] + overlap_data.shape[0])\n",
+    "print(full_0.shape[0] + full_1.shape[0] + full_out.shape[0] + overlap_data.shape[0])\n",
     "print(rbind_data.shape[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "死亡\n",
-      "0    511\n",
-      "1     12\n",
-      "Name: count, dtype: int64\n",
-      "死亡\n",
-      "0    113\n",
-      "1      1\n",
-      "Name: count, dtype: int64\n",
-      "死亡\n",
-      "0    304\n",
-      "1      2\n",
-      "Name: count, dtype: int64\n",
-      "死亡\n",
-      "0    1787\n",
-      "1      32\n",
+      "0    565\n",
+      "1     13\n",
+      "Name: 死亡, dtype: int64\n",
+      "0    2213\n",
+      "1      31\n",
       "2       1\n",
-      "Name: count, dtype: int64\n",
-      "死亡\n",
-      "0    150\n",
-      "1      9\n",
-      "Name: count, dtype: int64\n",
-      "死亡\n",
-      "0    173\n",
-      "1      1\n",
-      "Name: count, dtype: int64\n"
+      "Name: 死亡, dtype: int64\n",
+      "0    182\n",
+      "1     12\n",
+      "Name: 死亡, dtype: int64\n",
+      "0    78\n",
+      "1     1\n",
+      "Name: 死亡, dtype: int64\n"
      ]
     }
    ],
    "source": [
     "print(full_0['死亡'].value_counts())\n",
     "print(full_1['死亡'].value_counts())\n",
-    "print(full_2['死亡'].value_counts())\n",
-    "print(full_3['死亡'].value_counts())\n",
     "print(full_out['死亡'].value_counts())\n",
     "print(overlap_data['死亡'].value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# full_info.to_csv('./Data/PassData/full_info.csv', index=False)\n",
-    "# full_0.to_csv('./Data/PassData/full_0.csv', index=False)\n",
-    "# full_1.to_csv('./Data/PassData/full_1.csv', index=False)\n",
-    "# full_2.to_csv('./Data/PassData/full_2.csv', index=False)\n",
-    "# full_3.to_csv('./Data/PassData/full_3.csv', index=False)\n",
-    "# full_out.to_csv('./Data/PassData/full_out.csv', index=False)\n",
-    "# overlap_data.to_csv('./Data/PassData/overlap_data.csv', index=False)"
+    "full_info.to_csv('./Data/PassData/full_info.csv', index=False)\n",
+    "full_0.to_csv('./Data/PassData/full_0.csv', index=False)\n",
+    "full_1.to_csv('./Data/PassData/full_1.csv', index=False)\n",
+    "full_out.to_csv('./Data/PassData/full_out.csv', index=False)\n",
+    "overlap_data.to_csv('./Data/PassData/overlap_data.csv', index=False)"
    ]
   },
   {
